tahini/tests/error.tah
print a;

// RuntimeError: Undefined variable 'a'.
// [at line 1 in error.tah]
